// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`layout metrics (sizing harness) metrics: density-compact-flat 1`] = `
{
  "axisHeight": 29,
  "columns": [
    {
      "id": "label",
      "type": "text",
      "width": 74,
      "x": 8,
    },
    {
      "id": "est",
      "type": "forest",
      "width": 710,
      "x": 82,
    },
  ],
  "headerHeight": 29,
  "labelWidth": 74,
  "mainY": 16,
  "paperPad": 0,
  "plotHeight": 126,
  "rows": [
    {
      "depth": 0,
      "height": 21,
      "indent": 0,
      "index": 0,
      "kind": "data",
      "markerCenter": 10.5,
      "top": 0,
    },
    {
      "depth": 0,
      "height": 21,
      "indent": 0,
      "index": 1,
      "kind": "data",
      "markerCenter": 31.5,
      "top": 21,
    },
    {
      "depth": 0,
      "height": 21,
      "indent": 0,
      "index": 2,
      "kind": "data",
      "markerCenter": 52.5,
      "top": 42,
    },
    {
      "depth": 0,
      "height": 21,
      "indent": 0,
      "index": 3,
      "kind": "data",
      "markerCenter": 73.5,
      "top": 63,
    },
    {
      "depth": 0,
      "height": 21,
      "indent": 0,
      "index": 4,
      "kind": "data",
      "markerCenter": 94.5,
      "top": 84,
    },
    {
      "depth": 0,
      "height": 21,
      "indent": 0,
      "index": 5,
      "kind": "data",
      "markerCenter": 115.5,
      "top": 105,
    },
  ],
  "rowsHeight": 126,
  "shellPad": 0,
  "spacing": {
    "axisGap": 8,
    "cellPaddingX": 8,
    "cellPaddingY": 0,
    "headerHeight": 26,
    "indentPerLevel": 14,
    "padding": 8,
    "rowGroupPadding": 8,
    "rowHeight": 20,
  },
  "totalHeight": 212,
  "totalWidth": 800,
}
`;

exports[`layout metrics (sizing harness) metrics: density-comfortable-flat 1`] = `
{
  "axisHeight": 33,
  "columns": [
    {
      "id": "label",
      "type": "text",
      "width": 78,
      "x": 12,
    },
    {
      "id": "est",
      "type": "forest",
      "width": 698,
      "x": 90,
    },
  ],
  "headerHeight": 32,
  "labelWidth": 78,
  "mainY": 24,
  "paperPad": 0,
  "plotHeight": 144,
  "rows": [
    {
      "depth": 0,
      "height": 24,
      "indent": 0,
      "index": 0,
      "kind": "data",
      "markerCenter": 12,
      "top": 0,
    },
    {
      "depth": 0,
      "height": 24,
      "indent": 0,
      "index": 1,
      "kind": "data",
      "markerCenter": 36,
      "top": 24,
    },
    {
      "depth": 0,
      "height": 24,
      "indent": 0,
      "index": 2,
      "kind": "data",
      "markerCenter": 60,
      "top": 48,
    },
    {
      "depth": 0,
      "height": 24,
      "indent": 0,
      "index": 3,
      "kind": "data",
      "markerCenter": 84,
      "top": 72,
    },
    {
      "depth": 0,
      "height": 24,
      "indent": 0,
      "index": 4,
      "kind": "data",
      "markerCenter": 108,
      "top": 96,
    },
    {
      "depth": 0,
      "height": 24,
      "indent": 0,
      "index": 5,
      "kind": "data",
      "markerCenter": 132,
      "top": 120,
    },
  ],
  "rowsHeight": 144,
  "shellPad": 0,
  "spacing": {
    "axisGap": 12,
    "cellPaddingX": 10,
    "cellPaddingY": 0,
    "headerHeight": 32,
    "indentPerLevel": 16,
    "padding": 12,
    "rowGroupPadding": 12,
    "rowHeight": 24,
  },
  "totalHeight": 249,
  "totalWidth": 800,
}
`;

exports[`layout metrics (sizing harness) metrics: density-spacious-flat 1`] = `
{
  "axisHeight": 37,
  "columns": [
    {
      "id": "label",
      "type": "text",
      "width": 86,
      "x": 16,
    },
    {
      "id": "est",
      "type": "forest",
      "width": 682,
      "x": 102,
    },
  ],
  "headerHeight": 40,
  "labelWidth": 86,
  "mainY": 32,
  "paperPad": 0,
  "plotHeight": 180,
  "rows": [
    {
      "depth": 0,
      "height": 30,
      "indent": 0,
      "index": 0,
      "kind": "data",
      "markerCenter": 15,
      "top": 0,
    },
    {
      "depth": 0,
      "height": 30,
      "indent": 0,
      "index": 1,
      "kind": "data",
      "markerCenter": 45,
      "top": 30,
    },
    {
      "depth": 0,
      "height": 30,
      "indent": 0,
      "index": 2,
      "kind": "data",
      "markerCenter": 75,
      "top": 60,
    },
    {
      "depth": 0,
      "height": 30,
      "indent": 0,
      "index": 3,
      "kind": "data",
      "markerCenter": 105,
      "top": 90,
    },
    {
      "depth": 0,
      "height": 30,
      "indent": 0,
      "index": 4,
      "kind": "data",
      "markerCenter": 135,
      "top": 120,
    },
    {
      "depth": 0,
      "height": 30,
      "indent": 0,
      "index": 5,
      "kind": "data",
      "markerCenter": 165,
      "top": 150,
    },
  ],
  "rowsHeight": 180,
  "shellPad": 0,
  "spacing": {
    "axisGap": 16,
    "cellPaddingX": 14,
    "cellPaddingY": 0,
    "headerHeight": 40,
    "indentPerLevel": 20,
    "padding": 16,
    "rowGroupPadding": 16,
    "rowHeight": 30,
  },
  "totalHeight": 311,
  "totalWidth": 800,
}
`;

exports[`layout metrics (sizing harness) metrics: density-compact-overall 1`] = `
{
  "axisHeight": 29,
  "columns": [
    {
      "id": "label",
      "type": "text",
      "width": 74,
      "x": 8,
    },
    {
      "id": "est",
      "type": "forest",
      "width": 710,
      "x": 82,
    },
  ],
  "headerHeight": 29,
  "labelWidth": 74,
  "mainY": 16,
  "paperPad": 0,
  "plotHeight": 135,
  "rows": [
    {
      "depth": 0,
      "height": 21,
      "indent": 0,
      "index": 0,
      "kind": "data",
      "markerCenter": 10.5,
      "top": 0,
    },
    {
      "depth": 0,
      "height": 21,
      "indent": 0,
      "index": 1,
      "kind": "data",
      "markerCenter": 31.5,
      "top": 21,
    },
    {
      "depth": 0,
      "height": 21,
      "indent": 0,
      "index": 2,
      "kind": "data",
      "markerCenter": 52.5,
      "top": 42,
    },
    {
      "depth": 0,
      "height": 21,
      "indent": 0,
      "index": 3,
      "kind": "data",
      "markerCenter": 73.5,
      "top": 63,
    },
    {
      "depth": 0,
      "height": 21,
      "indent": 0,
      "index": 4,
      "kind": "data",
      "markerCenter": 94.5,
      "top": 84,
    },
  ],
  "rowsHeight": 105,
  "shellPad": 0,
  "spacing": {
    "axisGap": 8,
    "cellPaddingX": 8,
    "cellPaddingY": 0,
    "headerHeight": 26,
    "indentPerLevel": 14,
    "padding": 8,
    "rowGroupPadding": 8,
    "rowHeight": 20,
  },
  "totalHeight": 221,
  "totalWidth": 800,
}
`;

exports[`layout metrics (sizing harness) metrics: density-comfortable-overall 1`] = `
{
  "axisHeight": 33,
  "columns": [
    {
      "id": "label",
      "type": "text",
      "width": 78,
      "x": 12,
    },
    {
      "id": "est",
      "type": "forest",
      "width": 698,
      "x": 90,
    },
  ],
  "headerHeight": 32,
  "labelWidth": 78,
  "mainY": 24,
  "paperPad": 0,
  "plotHeight": 156,
  "rows": [
    {
      "depth": 0,
      "height": 24,
      "indent": 0,
      "index": 0,
      "kind": "data",
      "markerCenter": 12,
      "top": 0,
    },
    {
      "depth": 0,
      "height": 24,
      "indent": 0,
      "index": 1,
      "kind": "data",
      "markerCenter": 36,
      "top": 24,
    },
    {
      "depth": 0,
      "height": 24,
      "indent": 0,
      "index": 2,
      "kind": "data",
      "markerCenter": 60,
      "top": 48,
    },
    {
      "depth": 0,
      "height": 24,
      "indent": 0,
      "index": 3,
      "kind": "data",
      "markerCenter": 84,
      "top": 72,
    },
    {
      "depth": 0,
      "height": 24,
      "indent": 0,
      "index": 4,
      "kind": "data",
      "markerCenter": 108,
      "top": 96,
    },
  ],
  "rowsHeight": 120,
  "shellPad": 0,
  "spacing": {
    "axisGap": 12,
    "cellPaddingX": 10,
    "cellPaddingY": 0,
    "headerHeight": 32,
    "indentPerLevel": 16,
    "padding": 12,
    "rowGroupPadding": 12,
    "rowHeight": 24,
  },
  "totalHeight": 261,
  "totalWidth": 800,
}
`;

exports[`layout metrics (sizing harness) metrics: density-spacious-overall 1`] = `
{
  "axisHeight": 37,
  "columns": [
    {
      "id": "label",
      "type": "text",
      "width": 86,
      "x": 16,
    },
    {
      "id": "est",
      "type": "forest",
      "width": 682,
      "x": 102,
    },
  ],
  "headerHeight": 40,
  "labelWidth": 86,
  "mainY": 32,
  "paperPad": 0,
  "plotHeight": 195,
  "rows": [
    {
      "depth": 0,
      "height": 30,
      "indent": 0,
      "index": 0,
      "kind": "data",
      "markerCenter": 15,
      "top": 0,
    },
    {
      "depth": 0,
      "height": 30,
      "indent": 0,
      "index": 1,
      "kind": "data",
      "markerCenter": 45,
      "top": 30,
    },
    {
      "depth": 0,
      "height": 30,
      "indent": 0,
      "index": 2,
      "kind": "data",
      "markerCenter": 75,
      "top": 60,
    },
    {
      "depth": 0,
      "height": 30,
      "indent": 0,
      "index": 3,
      "kind": "data",
      "markerCenter": 105,
      "top": 90,
    },
    {
      "depth": 0,
      "height": 30,
      "indent": 0,
      "index": 4,
      "kind": "data",
      "markerCenter": 135,
      "top": 120,
    },
  ],
  "rowsHeight": 150,
  "shellPad": 0,
  "spacing": {
    "axisGap": 16,
    "cellPaddingX": 14,
    "cellPaddingY": 0,
    "headerHeight": 40,
    "indentPerLevel": 20,
    "padding": 16,
    "rowGroupPadding": 16,
    "rowHeight": 30,
  },
  "totalHeight": 326,
  "totalWidth": 800,
}
`;

exports[`layout metrics (sizing harness) metrics: wrap-compact 1`] = `
{
  "axisHeight": 29,
  "columns": [
    {
      "id": "label",
      "type": "text",
      "width": 69,
      "x": 8,
    },
    {
      "id": "notes",
      "type": "text",
      "width": 160,
      "x": 77,
    },
    {
      "id": "est",
      "type": "forest",
      "width": 555,
      "x": 237,
    },
  ],
  "headerHeight": 29,
  "labelWidth": 69,
  "mainY": 16,
  "paperPad": 0,
  "plotHeight": 117,
  "rows": [
    {
      "depth": 0,
      "height": 48,
      "indent": 0,
      "index": 0,
      "kind": "data",
      "markerCenter": 24,
      "top": 0,
    },
    {
      "depth": 0,
      "height": 21,
      "indent": 0,
      "index": 1,
      "kind": "data",
      "markerCenter": 58.5,
      "top": 48,
    },
    {
      "depth": 0,
      "height": 48,
      "indent": 0,
      "index": 2,
      "kind": "data",
      "markerCenter": 93,
      "top": 69,
    },
  ],
  "rowsHeight": 117,
  "shellPad": 0,
  "spacing": {
    "axisGap": 8,
    "cellPaddingX": 8,
    "cellPaddingY": 0,
    "headerHeight": 26,
    "indentPerLevel": 14,
    "padding": 8,
    "rowGroupPadding": 8,
    "rowHeight": 20,
  },
  "totalHeight": 203,
  "totalWidth": 800,
}
`;

exports[`layout metrics (sizing harness) metrics: wrap-comfortable 1`] = `
{
  "axisHeight": 33,
  "columns": [
    {
      "id": "label",
      "type": "text",
      "width": 73,
      "x": 12,
    },
    {
      "id": "notes",
      "type": "text",
      "width": 160,
      "x": 85,
    },
    {
      "id": "est",
      "type": "forest",
      "width": 543,
      "x": 245,
    },
  ],
  "headerHeight": 32,
  "labelWidth": 73,
  "mainY": 24,
  "paperPad": 0,
  "plotHeight": 120,
  "rows": [
    {
      "depth": 0,
      "height": 48,
      "indent": 0,
      "index": 0,
      "kind": "data",
      "markerCenter": 24,
      "top": 0,
    },
    {
      "depth": 0,
      "height": 24,
      "indent": 0,
      "index": 1,
      "kind": "data",
      "markerCenter": 60,
      "top": 48,
    },
    {
      "depth": 0,
      "height": 48,
      "indent": 0,
      "index": 2,
      "kind": "data",
      "markerCenter": 96,
      "top": 72,
    },
  ],
  "rowsHeight": 120,
  "shellPad": 0,
  "spacing": {
    "axisGap": 12,
    "cellPaddingX": 10,
    "cellPaddingY": 0,
    "headerHeight": 32,
    "indentPerLevel": 16,
    "padding": 12,
    "rowGroupPadding": 12,
    "rowHeight": 24,
  },
  "totalHeight": 225,
  "totalWidth": 800,
}
`;

exports[`layout metrics (sizing harness) metrics: wrap-spacious 1`] = `
{
  "axisHeight": 37,
  "columns": [
    {
      "id": "label",
      "type": "text",
      "width": 81,
      "x": 16,
    },
    {
      "id": "notes",
      "type": "text",
      "width": 160,
      "x": 97,
    },
    {
      "id": "est",
      "type": "forest",
      "width": 527,
      "x": 257,
    },
  ],
  "headerHeight": 40,
  "labelWidth": 81,
  "mainY": 32,
  "paperPad": 0,
  "plotHeight": 126,
  "rows": [
    {
      "depth": 0,
      "height": 48,
      "indent": 0,
      "index": 0,
      "kind": "data",
      "markerCenter": 24,
      "top": 0,
    },
    {
      "depth": 0,
      "height": 30,
      "indent": 0,
      "index": 1,
      "kind": "data",
      "markerCenter": 63,
      "top": 48,
    },
    {
      "depth": 0,
      "height": 48,
      "indent": 0,
      "index": 2,
      "kind": "data",
      "markerCenter": 102,
      "top": 78,
    },
  ],
  "rowsHeight": 126,
  "shellPad": 0,
  "spacing": {
    "axisGap": 16,
    "cellPaddingX": 14,
    "cellPaddingY": 0,
    "headerHeight": 40,
    "indentPerLevel": 20,
    "padding": 16,
    "rowGroupPadding": 16,
    "rowHeight": 30,
  },
  "totalHeight": 257,
  "totalWidth": 800,
}
`;

exports[`layout metrics (sizing harness) metrics: indent-depths 1`] = `
{
  "axisHeight": 33,
  "columns": [
    {
      "id": "label",
      "type": "text",
      "width": 123,
      "x": 12,
    },
    {
      "id": "est",
      "type": "forest",
      "width": 653,
      "x": 135,
    },
  ],
  "headerHeight": 32,
  "labelWidth": 123,
  "mainY": 24,
  "paperPad": 0,
  "plotHeight": 96,
  "rows": [
    {
      "depth": 0,
      "height": 24,
      "indent": 0,
      "index": 0,
      "kind": "data",
      "markerCenter": 12,
      "top": 0,
    },
    {
      "depth": 0,
      "height": 24,
      "indent": 1,
      "index": 1,
      "kind": "data",
      "markerCenter": 36,
      "top": 24,
    },
    {
      "depth": 0,
      "height": 24,
      "indent": 2,
      "index": 2,
      "kind": "data",
      "markerCenter": 60,
      "top": 48,
    },
    {
      "depth": 0,
      "height": 24,
      "indent": 3,
      "index": 3,
      "kind": "data",
      "markerCenter": 84,
      "top": 72,
    },
  ],
  "rowsHeight": 96,
  "shellPad": 0,
  "spacing": {
    "axisGap": 12,
    "cellPaddingX": 10,
    "cellPaddingY": 0,
    "headerHeight": 32,
    "indentPerLevel": 16,
    "padding": 12,
    "rowGroupPadding": 12,
    "rowHeight": 24,
  },
  "totalHeight": 201,
  "totalWidth": 800,
}
`;

exports[`layout metrics (sizing harness) metrics: spacers 1`] = `
{
  "axisHeight": 33,
  "columns": [
    {
      "id": "label",
      "type": "text",
      "width": 135,
      "x": 12,
    },
    {
      "id": "est",
      "type": "forest",
      "width": 641,
      "x": 147,
    },
  ],
  "headerHeight": 32,
  "labelWidth": 135,
  "mainY": 24,
  "paperPad": 0,
  "plotHeight": 84,
  "rows": [
    {
      "depth": 0,
      "height": 24,
      "indent": 0,
      "index": 0,
      "kind": "data",
      "markerCenter": 12,
      "top": 0,
    },
    {
      "depth": 0,
      "height": 24,
      "indent": 0,
      "index": 1,
      "kind": "data",
      "markerCenter": 36,
      "top": 24,
    },
    {
      "depth": 0,
      "height": 12,
      "indent": 0,
      "index": 2,
      "kind": "spacer",
      "markerCenter": 54,
      "top": 48,
    },
    {
      "depth": 0,
      "height": 24,
      "indent": 0,
      "index": 3,
      "kind": "data",
      "markerCenter": 72,
      "top": 60,
    },
  ],
  "rowsHeight": 84,
  "shellPad": 0,
  "spacing": {
    "axisGap": 12,
    "cellPaddingX": 10,
    "cellPaddingY": 0,
    "headerHeight": 32,
    "indentPerLevel": 16,
    "padding": 12,
    "rowGroupPadding": 12,
    "rowHeight": 24,
  },
  "totalHeight": 189,
  "totalWidth": 800,
}
`;

exports[`layout metrics (sizing harness) metrics: groups-compact 1`] = `
{
  "axisHeight": 29,
  "columns": [
    {
      "id": "label",
      "type": "text",
      "width": 106,
      "x": 8,
    },
    {
      "id": "est",
      "type": "forest",
      "width": 678,
      "x": 114,
    },
  ],
  "headerHeight": 29,
  "labelWidth": 106,
  "mainY": 16,
  "paperPad": 0,
  "plotHeight": 132,
  "rows": [
    {
      "depth": 0,
      "height": 20,
      "indent": 0,
      "index": 0,
      "kind": "group_header",
      "markerCenter": 10,
      "top": 0,
    },
    {
      "depth": 1,
      "height": 21,
      "indent": 0,
      "index": 1,
      "kind": "data",
      "markerCenter": 30.5,
      "top": 20,
    },
    {
      "depth": 1,
      "height": 29,
      "indent": 0,
      "index": 2,
      "kind": "data",
      "markerCenter": 51.5,
      "top": 41,
    },
    {
      "depth": 0,
      "height": 20,
      "indent": 0,
      "index": 3,
      "kind": "group_header",
      "markerCenter": 80,
      "top": 70,
    },
    {
      "depth": 1,
      "height": 21,
      "indent": 0,
      "index": 4,
      "kind": "data",
      "markerCenter": 100.5,
      "top": 90,
    },
    {
      "depth": 1,
      "height": 21,
      "indent": 0,
      "index": 5,
      "kind": "data",
      "markerCenter": 121.5,
      "top": 111,
    },
  ],
  "rowsHeight": 132,
  "shellPad": 0,
  "spacing": {
    "axisGap": 8,
    "cellPaddingX": 8,
    "cellPaddingY": 0,
    "headerHeight": 26,
    "indentPerLevel": 14,
    "padding": 8,
    "rowGroupPadding": 8,
    "rowHeight": 20,
  },
  "totalHeight": 218,
  "totalWidth": 800,
}
`;

exports[`layout metrics (sizing harness) metrics: groups-comfortable 1`] = `
{
  "axisHeight": 33,
  "columns": [
    {
      "id": "label",
      "type": "text",
      "width": 110,
      "x": 12,
    },
    {
      "id": "est",
      "type": "forest",
      "width": 666,
      "x": 122,
    },
  ],
  "headerHeight": 32,
  "labelWidth": 110,
  "mainY": 24,
  "paperPad": 0,
  "plotHeight": 156,
  "rows": [
    {
      "depth": 0,
      "height": 24,
      "indent": 0,
      "index": 0,
      "kind": "group_header",
      "markerCenter": 12,
      "top": 0,
    },
    {
      "depth": 1,
      "height": 24,
      "indent": 0,
      "index": 1,
      "kind": "data",
      "markerCenter": 36,
      "top": 24,
    },
    {
      "depth": 1,
      "height": 36,
      "indent": 0,
      "index": 2,
      "kind": "data",
      "markerCenter": 60,
      "top": 48,
    },
    {
      "depth": 0,
      "height": 24,
      "indent": 0,
      "index": 3,
      "kind": "group_header",
      "markerCenter": 96,
      "top": 84,
    },
    {
      "depth": 1,
      "height": 24,
      "indent": 0,
      "index": 4,
      "kind": "data",
      "markerCenter": 120,
      "top": 108,
    },
    {
      "depth": 1,
      "height": 24,
      "indent": 0,
      "index": 5,
      "kind": "data",
      "markerCenter": 144,
      "top": 132,
    },
  ],
  "rowsHeight": 156,
  "shellPad": 0,
  "spacing": {
    "axisGap": 12,
    "cellPaddingX": 10,
    "cellPaddingY": 0,
    "headerHeight": 32,
    "indentPerLevel": 16,
    "padding": 12,
    "rowGroupPadding": 12,
    "rowHeight": 24,
  },
  "totalHeight": 261,
  "totalWidth": 800,
}
`;

exports[`layout metrics (sizing harness) metrics: groups-spacious 1`] = `
{
  "axisHeight": 37,
  "columns": [
    {
      "id": "label",
      "type": "text",
      "width": 118,
      "x": 16,
    },
    {
      "id": "est",
      "type": "forest",
      "width": 650,
      "x": 134,
    },
  ],
  "headerHeight": 40,
  "labelWidth": 118,
  "mainY": 32,
  "paperPad": 0,
  "plotHeight": 196,
  "rows": [
    {
      "depth": 0,
      "height": 30,
      "indent": 0,
      "index": 0,
      "kind": "group_header",
      "markerCenter": 15,
      "top": 0,
    },
    {
      "depth": 1,
      "height": 30,
      "indent": 0,
      "index": 1,
      "kind": "data",
      "markerCenter": 45,
      "top": 30,
    },
    {
      "depth": 1,
      "height": 46,
      "indent": 0,
      "index": 2,
      "kind": "data",
      "markerCenter": 75,
      "top": 60,
    },
    {
      "depth": 0,
      "height": 30,
      "indent": 0,
      "index": 3,
      "kind": "group_header",
      "markerCenter": 121,
      "top": 106,
    },
    {
      "depth": 1,
      "height": 30,
      "indent": 0,
      "index": 4,
      "kind": "data",
      "markerCenter": 151,
      "top": 136,
    },
    {
      "depth": 1,
      "height": 30,
      "indent": 0,
      "index": 5,
      "kind": "data",
      "markerCenter": 181,
      "top": 166,
    },
  ],
  "rowsHeight": 196,
  "shellPad": 0,
  "spacing": {
    "axisGap": 16,
    "cellPaddingX": 14,
    "cellPaddingY": 0,
    "headerHeight": 40,
    "indentPerLevel": 20,
    "padding": 16,
    "rowGroupPadding": 16,
    "rowHeight": 30,
  },
  "totalHeight": 327,
  "totalWidth": 800,
}
`;

exports[`layout metrics (sizing harness) metrics: mixed-columns 1`] = `
{
  "axisHeight": 33,
  "columns": [
    {
      "id": "label",
      "type": "text",
      "width": 78,
      "x": 12,
    },
    {
      "id": "n",
      "type": "numeric",
      "width": 65.838,
      "x": 90,
    },
    {
      "id": "grade",
      "type": "badge",
      "width": 76.16,
      "x": 155.838,
    },
    {
      "id": "pct",
      "type": "bar",
      "width": 129.189,
      "x": 231.998,
    },
    {
      "id": "est",
      "type": "forest",
      "width": 426.813,
      "x": 361.187,
    },
  ],
  "headerHeight": 32,
  "labelWidth": 78,
  "mainY": 24,
  "paperPad": 0,
  "plotHeight": 120,
  "rows": [
    {
      "depth": 0,
      "height": 24,
      "indent": 0,
      "index": 0,
      "kind": "data",
      "markerCenter": 12,
      "top": 0,
    },
    {
      "depth": 0,
      "height": 24,
      "indent": 0,
      "index": 1,
      "kind": "data",
      "markerCenter": 36,
      "top": 24,
    },
    {
      "depth": 0,
      "height": 24,
      "indent": 0,
      "index": 2,
      "kind": "data",
      "markerCenter": 60,
      "top": 48,
    },
    {
      "depth": 0,
      "height": 24,
      "indent": 0,
      "index": 3,
      "kind": "data",
      "markerCenter": 84,
      "top": 72,
    },
    {
      "depth": 0,
      "height": 24,
      "indent": 0,
      "index": 4,
      "kind": "data",
      "markerCenter": 108,
      "top": 96,
    },
  ],
  "rowsHeight": 120,
  "shellPad": 0,
  "spacing": {
    "axisGap": 12,
    "cellPaddingX": 10,
    "cellPaddingY": 0,
    "headerHeight": 32,
    "indentPerLevel": 16,
    "padding": 12,
    "rowGroupPadding": 12,
    "rowHeight": 24,
  },
  "totalHeight": 225,
  "totalWidth": 800,
}
`;

exports[`layout metrics (sizing harness) metrics: pure-table-no-axis 1`] = `
{
  "axisHeight": 0,
  "columns": [
    {
      "id": "label",
      "type": "text",
      "width": 78,
      "x": 12,
    },
    {
      "id": "n",
      "type": "numeric",
      "width": 60,
      "x": 90,
    },
  ],
  "headerHeight": 32,
  "labelWidth": 78,
  "mainY": 24,
  "paperPad": 0,
  "plotHeight": 96,
  "rows": [
    {
      "depth": 0,
      "height": 24,
      "indent": 0,
      "index": 0,
      "kind": "data",
      "markerCenter": 12,
      "top": 0,
    },
    {
      "depth": 0,
      "height": 24,
      "indent": 0,
      "index": 1,
      "kind": "data",
      "markerCenter": 36,
      "top": 24,
    },
    {
      "depth": 0,
      "height": 24,
      "indent": 0,
      "index": 2,
      "kind": "data",
      "markerCenter": 60,
      "top": 48,
    },
    {
      "depth": 0,
      "height": 24,
      "indent": 0,
      "index": 3,
      "kind": "data",
      "markerCenter": 84,
      "top": 72,
    },
  ],
  "rowsHeight": 96,
  "shellPad": 0,
  "spacing": {
    "axisGap": 12,
    "cellPaddingX": 10,
    "cellPaddingY": 0,
    "headerHeight": 32,
    "indentPerLevel": 16,
    "padding": 12,
    "rowGroupPadding": 12,
    "rowHeight": 24,
  },
  "totalHeight": 168,
  "totalWidth": 162,
}
`;

exports[`layout metrics (sizing harness) metrics: content-height-pictogram 1`] = `
{
  "axisHeight": 0,
  "columns": [
    {
      "id": "label",
      "type": "text",
      "width": 67,
      "x": 12,
    },
    {
      "id": "cnt",
      "type": "pictogram",
      "width": 84,
      "x": 79,
    },
  ],
  "headerHeight": 32,
  "labelWidth": 67,
  "mainY": 24,
  "paperPad": 0,
  "plotHeight": 136,
  "rows": [
    {
      "depth": 0,
      "height": 24,
      "indent": 0,
      "index": 0,
      "kind": "data",
      "markerCenter": 12,
      "top": 0,
    },
    {
      "depth": 0,
      "height": 42,
      "indent": 0,
      "index": 1,
      "kind": "data",
      "markerCenter": 45,
      "top": 24,
    },
    {
      "depth": 0,
      "height": 70,
      "indent": 0,
      "index": 2,
      "kind": "data",
      "markerCenter": 101,
      "top": 66,
    },
  ],
  "rowsHeight": 136,
  "shellPad": 0,
  "spacing": {
    "axisGap": 12,
    "cellPaddingX": 10,
    "cellPaddingY": 0,
    "headerHeight": 32,
    "indentPerLevel": 16,
    "padding": 12,
    "rowGroupPadding": 12,
    "rowHeight": 24,
  },
  "totalHeight": 208,
  "totalWidth": 175,
}
`;
